Fix sidebar overflow behaviour (thanks @mrmonday)

--- a/bootdoc.css
+++ b/bootdoc.css
@@ -2,6 +2,12 @@
 	padding-top: 40px;
 }
 
+.sidebar-list-entry {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
 .highlighted-symbol {
 	background-color: rgba(255, 200, 0, 0.5);
 }
